libpmount (0.0.17-2) UNRELEASED; urgency=medium

  * Use https for hadrons.org URLs.
  * Now using Standards-Version 3.9.8 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Sat, 05 Dec 2015 16:47:32 +0100

libpmount (0.0.17-1) unstable; urgency=low

  * New upstream release.
    - Enable LFS.
    - Add genisoimage to Build-Depends, required by the test suite.
    - Rework debian/rules for the new upstream build system.
    - Switch source package to «3.0 (quilt)».
    - Rename libpmount0.0 to libpmount0.
  * Remove packaging history from debian/copyright.
  * Switch debian/copyright to machine-readable format 1.0.
  * Switch to debhelper compatibility level 9.
  * Now using Standards-Version 3.9.6 (no changes needed).
  * Add upstream Homepage field.
  * Add a watch file.
  * Update packaging Vcs field URLs to their new location, and switch to
    use the cgit web interface.
  * Make library packages multiarch:
   - Mark libpmount0 and libpmount-dev as “Multi-Arch: same”.
   - Define DEB_HOST_MULTIARCH and use it to set libdir.
   - Change paths from lib/ to lib/* in install files.

 -- Guillem Jover <guillem@debian.org>  Thu, 13 Aug 2015 00:34:27 +0200

libpmount (0.0.16) unstable; urgency=low

  * Do not use MNT_NODEV which was removed on kFreeBSD 7.0. Closes: #659280

 -- Guillem Jover <guillem@debian.org>  Thu, 09 Feb 2012 21:49:07 +0100

libpmount (0.0.15) unstable; urgency=low

  * Use a format string on fprintf() instead of directly using a string
    variable to fix build with -Werror=format-security. Closes: #643432
  * Always check asprintf() return code.

 -- Guillem Jover <guillem@debian.org>  Wed, 28 Sep 2011 19:39:11 +0200

libpmount (0.0.14) unstable; urgency=low

  * Switch the symbols file to use symver tags instead of symbol patterns.
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS.
  * Rename build target to build-arch, add build-indep and build targets,