@@ -2,6 +2,7 @@ libpmount (0.0.17-2) UNRELEASED; urgency=medium
 
   * Use https for hadrons.org URLs.
   * Now using Standards-Version 3.9.8 (no changes needed).
+  * Switch to the dpkg makefile fragments in debian/rules.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 05 Dec 2015 16:47:32 +0100
 
